initial tag code

--- a/config.toml
+++ b/config.toml
@@ -1,2 +1,10 @@
 # Your Discord bot token used for logging in.
 token = ""
+# The bot extensions to load on startup.
+extensions = [
+    "jishaku",
+    "extensions.tags"
+]
+
+[database]
+connection_uri = ""
