--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ packages = [
 python = "^3.11"
 discord-py = "^2.2.2"
 jishaku = "^2.5.1"
+asyncpg = "^0.27.0"
 
 [tool.poetry.group.dev.dependencies]
 black = "^23.1.0"
