--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ python = "^3.11"
 discord-py = "^2.2.2"
 jishaku = "^2.5.1"
 asyncpg = "^0.27.0"
+pytz = "^2022.7.1"
 
 [tool.poetry.group.dev.dependencies]
 black = "^23.1.0"
