--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,8 @@ cachetools = "^5.3.0"
 
 [tool.poetry.group.dev.dependencies]
 black = "^23.1.0"
+mkdocs = "^1.4.2"
+mkdocs-material = "^9.1.3"
 
 [build-system]
 requires = ["poetry-core"]
