--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,8 @@ pytz = "^2022.7.1"
 fuzzywuzzy = "^0.18.0"
 python-levenshtein = "^0.20.9"
 cachetools = "^5.3.0"
+pillow = "^9.4.0"
+aiohttp = "^3.8.4"
 
 [tool.poetry.group.dev.dependencies]
 black = "^23.1.0"
