--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,10 @@ pytz = "^2022.7.1"
 fuzzywuzzy = "^0.18.0"
 python-levenshtein = "^0.20.9"
 cachetools = "^5.3.0"
+python-logging-discord-handler = "^0.1.4"
+logging = "^0.4.9.6"
+rich = "^13.3.3"
+aiohttp = "^3.8.4"
 
 [tool.poetry.group.dev.dependencies]
 black = "^23.1.0"
