--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,8 +12,8 @@ packages = [
 
 [tool.poetry.dependencies]
 python = "^3.11"
-discord-py = "^2.2.2"
-jishaku = "^2.5.1"
+disnake = "^2.8.1"
+disnake-jishaku = "^2.6.5"
 asyncpg = "^0.27.0"
 pytz = "^2022.7.1"
 fuzzywuzzy = "^0.18.0"
@@ -22,7 +22,6 @@ cachetools = "^5.3.0"
 python-logging-discord-handler = "^0.1.4"
 logging = "^0.4.9.6"
 rich = "^13.3.3"
-aiohttp = "^3.8.4"
 
 [tool.poetry.group.dev.dependencies]
 black = "^23.1.0"
